# rafi

./: .gitignore  README.rst  pyproject.toml  requirements_dev.txt
.github/workflows/: pythonpackage.yml
.semaphore/: pypi-deploy.yml  secrets.yml  semaphore.yml
example/: README.rst  main.py
rafi/: __init__.py
tests/: test_rafi.py
