[tool.poetry]
name = "rafi"
version = "0.2.1"
description = "A tiny route dispatcher for Google Cloud Functions."
authors = ["Danilo Braband <dbraband@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "http://github.com/dabio/rafi"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
exclude = ["example/"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.5b1"
aiohttp = "^3.7"
flask = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
