[tool.poetry]
name = "rafi"
version = "0.2.1"
description = "A tiny route dispatcher for Google Cloud Functions."
authors = ["Danilo Braband <dbraband@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "http://github.com/dabio/rafi"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
exclude = ["example/"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3"
aiohttp = "^3.8"
flask = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
